# Otc_trade

./: .gitignore  CMakeLists.txt  README.md  install.bat
doc/: OTC Trader配置.docx  OTC操作文档.docx  Option Truck XLW说明文档.docx  ~$C Trader配置.docx
doc/input/: calendarDay.txt  templateProductParam.ini
excel/: settle.xlsx
src/: CMakeLists.txt
src/Resources/: traderqtapp.qrc
src/Resources/img/: Icon.rc
src/Resources/input/: accountParam.ini
src/base/: StructFunction.cpp  StructFunction.h  mdspi.cpp  mdspi.h  traderspi.cpp  traderspi.h
src/core/: ctpcontrol.cpp  ctpcontrol.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  qOrderManager.cpp  qOrderManager.h  qstrategy.cpp  qstrategy.h  qstrategy.ui  qstrategythread.cpp  qstrategythread.h  quserstrategy.cpp  quserstrategy.h  strategythread.ui  traderqtapp.cpp  traderqtapp.h  traderqtapp.ui
src/ctpFiles/: 20180412前不可用.rar
src/optionModel/: algorithmLib.cpp  algorithmLib.h  americanPrice.cpp  americanPrice.h  asianBarrier.cpp  asianBarrier.h  asianPrice.cpp  asianPrice.h  barrierPrice.cpp  barrierPrice.h  digital.cpp  digital.h  europeanPrice.cpp  europeanPrice.h  option.cpp  option.h  stdafx.h  structure.cpp  structure.h
src/oracle/: OracleOperateFun.cpp  OracleOperateFun.h
